--- a/week01/styles/chamber-site-plan.css
+++ b/week01/styles/chamber-site-plan.css
@@ -6,25 +6,30 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #274c77;
-  --secondary-color: #a3cef1;
-  --accent1-color: #6096ba;
-  --accent2-color: #e7ecef;
+  --primary-color: #f7b32bff;
+  --secondary-color: #62929eff;
+  --accent1-color: #d00000ff;
+  --accent2-color: #fdfdffff;
+  --accent3-charcoal: #444554ff;
 
   /* change the values below to your chosen font(s) */
   --heading-font: 'Roboto', sans-serif;
   --paragraph-font: 'Noto Sans', sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #274c77; /* headlines on a white background */
+  --headline-color-on-white: #f7b32bff; /* headlines on a white background */
   --headline-color-on-color: #e7ecef; /* headlines on a colored background */
-  --paragraph-color-on-white: #274c77; /* paragraph text on a white background */
+  --paragraph-color-on-white: #444554ff; /* paragraph text on a white background */
   --paragraph-color-on-color: #e7ecef; /* paragraph text on a colored background */
-  --paragraph-background-color: #274c77;
-  --nav-link-color: #274c77;
-  --nav-background-color: #a3cef1;
-  --nav-hover-link-color: #e7ecef;
-  --nav-hover-background-color: #274c77;
+  --paragraph-background-color: #444554ff;
+  --nav-link-color: #fdfdffff;
+  --nav-background-color: #62929eff;
+  --nav-hover-link-color: #f7b32bff;
+  --nav-hover-background-color: #444554ff;
+}
+
+.primary-color {
+  color: var(--primary-color);
 }
 
 body {
@@ -66,7 +71,8 @@ header > h1,
 header > h2 {
   color: var(--headline-color-on-color);
 }
-p {
+p,
+li {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color-on-white);
   padding: 1em;
@@ -124,47 +130,13 @@ nav a:hover {
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
 }
-.sitemap {
-  display: grid;
-  justify-content: center;
-
-  grid-template-columns: repeat(6, 15%);
-  grid-template-rows: 3em 1.5em 1.5em 3em;
-  grid-template-areas:
-    '. . home home . .'
-    '. . . top . .'
-    '. left left right right .'
-    'page2 page2 . . page3 page3';
+.sitemap img {
+  min-width: 100%;
 }
-.sitemap > div {
+.sitemap > img {
   text-align: center;
 }
-.sm-home {
-  grid-area: home;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page2 {
-  grid-area: page2;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page3 {
-  grid-area: page3;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.top {
-  grid-area: top;
-  border-left: 1px solid;
-}
-.left {
-  grid-area: left;
-  border-top: 1px solid;
-  border-left: 1px solid;
-}
-.right {
-  grid-area: right;
-  border-top: 1px solid;
-  border-right: 1px solid;
+
+ul li {
+  text-align: left;
 }
