--- a/week02/styles/design.css
+++ b/week02/styles/design.css
@@ -20,11 +20,17 @@ h1 {
 
 main {
   display: grid;
+  grid-template-columns: auto auto;
 }
 
 h2 {
   color: navy;
   text-align: left;
+  grid-column: 1/3;
+}
+
+section:nth-child(3) {
+  text-align: center;
 }
 
 article p {
@@ -32,14 +38,21 @@ article p {
 }
 
 .callout {
-  color: #777;
+  color: #eee;
   background-color: #702963;
-  padding: 5px;
+  padding: 5px 18px;
+}
+
+.banner {
+  text-align: center;
+  padding: 10px;
+  background: rgb(187, 187, 255);
+  border: 1px solid gray;
 }
 
 footer {
   margin-top: 1rem;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   font-size: smaller;
-  text-align: right;
+  text-align: left;
 }
