--- a/styles/base.css
+++ b/styles/base.css
@@ -95,11 +95,7 @@ header span {
   text-transform: capitalize;
 }
 
-nav ul {
-  list-style: none;
-}
-
-nav ul a {
+nav a {
   color: var(--color-neutral);
   background: var(--color-blue-gray);
 
@@ -111,12 +107,12 @@ nav ul a {
   justify-content: center;
 }
 
-nav ul a.active {
+nav a.active {
   background: var(--color-yellow);
   font-weight: bold;
 }
 
-nav ul a:hover {
+nav a:hover {
   opacity: 0.9;
 }
 
@@ -147,7 +143,8 @@ main > h1 {
   padding: 10px;
 }
 
-.card ul {
+.card ul,
+.card .list-link {
   list-style: none;
   padding: 20px 15px;
   line-height: 26px;
