--- a/week03/styles/lazyload.css
+++ b/week03/styles/lazyload.css
@@ -6,4 +6,16 @@ main img {
   width: 400px;
   height: 600px;
   margin: auto;
+  background: black;
+  animation: fade 15s;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
