--- a/styles/larger.css
+++ b/styles/larger.css
@@ -12,19 +12,26 @@
     margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 300px;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto;
     grid-column-gap: 20px;
   }
 
   main h1 {
     grid-column: 1/4;
+    grid-row: 1;
   }
-  .card {
+
+  .hero {
+    grid-column: 1 / 4;
     grid-row: 2;
+  }
+
+  .card {
+    grid-row: 3;
     grid-column: 1/3;
   }
   .card:last-child {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 3;
   }
 }
