--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -10,6 +10,13 @@
     display: none; /* hide hamburger button */
   }
 
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .navigation {
     flex-direction: row;
   }
@@ -34,5 +41,30 @@
 
   .companies-spotlights-advertisements {
     grid-column: 1/4;
+  }
+
+  .discover {
+    display: grid;
+    grid-template-columns: 35% 1fr;
+    grid-column-gap: 50px;
+    grid-template-rows: auto;
+  }
+
+  .discover aside {
+    grid-row: initial;
+  }
+
+  .discover .gallery-images img:hover {
+    filter: grayscale(0.7);
+  }
+
+  .discover .gallery-images img {
+    height: 350px;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .discover .gallery-images img {
+    height: 500px;
   }
 }
