--- a/styles/base.css
+++ b/styles/base.css
@@ -11,7 +11,7 @@ body {
   font-style: normal;
 
   display: grid;
-  grid-template-rows: auto auto 1fr auto;
+  /* grid-template-rows: auto auto 1fr auto; */
   min-height: 100vh;
 
   background: rgb(238, 238, 238);
