--- a/styles/larger.css
+++ b/styles/larger.css
@@ -18,7 +18,7 @@
     display: block;
   }
 
-  main {
+  main.home {
     max-width: 1024px;
     margin: auto;
     display: grid;
@@ -27,7 +27,7 @@
     grid-column-gap: 20px;
   }
 
-  main h1 {
+  main.home h1 {
     grid-column: 1/4;
     grid-row: 1;
   }
