W04 Project Milestone: The Chamber Join Page

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -65,6 +65,7 @@
   /* form */
 
   .join {
+    margin-bottom: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
