--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -85,6 +85,12 @@
     margin-top: 0px;
     grid-row: 2;
   }
+
+  /* directory */
+  .directory {
+    min-height: 60vh;
+    grid-template-columns: auto;
+  }
 }
 
 @media screen and (min-width: 1100px) {
