--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -372,3 +372,116 @@ input::placeholder {
 .directory h3 {
   word-break: break-all;
 }
+
+/* home-page */
+
+.home-page .hero {
+  position: relative;
+  margin-bottom: 62px;
+}
+
+.home-page .hero .call-to-action {
+  cursor: pointer;
+  background: var(--color-neutral);
+  color: var(--color-primary);
+  border: 5px solid var(--color-neutral);
+  border-radius: 2px;
+  font-weight: bold;
+  padding: 10px 30px;
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: all 0.3s;
+
+  position: absolute;
+  top: 42%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 274px;
+}
+
+.home-page .hero .call-to-action:hover {
+  border: 5px solid var(--color-primary);
+}
+
+.show-banner {
+  display: flex !important;
+}
+
+#chamber-meet-banner {
+  display: none;
+  border: 5px solid var(--color-blue);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 55px;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 62px;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#chamber-meet-banner h2 {
+  margin-top: 0;
+}
+
+#chamber-meet-banner p {
+  margin: 0;
+}
+
+.weather-information,
+.current-events,
+.spotlight-members {
+  margin-bottom: 62px;
+}
+
+.current-events img {
+  object-position: right;
+}
+
+.weather-information {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  column-gap: 60px;
+}
+
+.weather-information #weather-icon {
+  width: 30px;
+  margin-right: 5px;
+}
+
+.weather-information ul {
+  padding: 0;
+}
+
+.weather-information ul li {
+  font-size: 25px;
+  line-height: 43px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-page .cards {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  align-items: baseline;
+}
+
+.home-page .card h3 {
+  text-transform: capitalize;
+}
+
+.home-page .card img {
+  height: 280px;
+}
+
+.current-events h2 {
+  position: relative;
+  top: 30px;
+}
